# ecommerce

./: .gitignore  Makefile  WORKSPACE.bazel  terraform.tfstate
.github/: labeler.yml
.github/push-image/: action.yml
.github/workflows/: deploy.yml  lint.yml
diagram/: ShoppingCart.drawio
services/user/: BUILD.bazel  main.py
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  task-definition.json  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf  versions.tf
terraform/modules/api-gateway/: deployment.tf  main.tf  outputs.tf  policy.tf  product.tf  resources.tf  variables.tf
terraform/modules/ecs/: iam.tf  main.tf  outputs.tf  security-group.tf  task_definition.tpl  variables.tf
terraform/modules/load-balancer/: main.tf  outputs.tf  security-group.tf  variables.tf
terraform/modules/networking/: api_gateway.tf  elastic-ip.tf  internet-gateway.tf  lb.tf  main.tf  nat-gateway.tf  outputs.tf  route-table.tf  sg.tf  subnet.tf  vpc.tf
terraform/modules/rds/: main.tf  outputs.tf  security-group.tf  variables.tf
ui/: package-lock.json  package.json  tsconfig.json  vite.config.ts  webpack.config.js
ui/.storybook/: main.js
ui/src/: app.tsx  index.tsx
ui/src/card/: index.ts
ui/src/card/card-task/: index.tsx
ui/src/components/card/: index.tsx
ui/src/components/card/card-task/: index.stories.tsx  index.tsx
ui/src/css/: background.ts  global.css
ui/src/pages/: home.tsx
